# RustX

./: Cargo.toml  README.md
db/: schema.sql
src/: account.rs  buffer.rs  database.rs  exchange.rs  main.rs  parser.rs
src/database/: NYSE.csv  inserts.sql  schema.sql  setup.txt
src/exchange/: filled.rs  market.rs  requests.rs  stats.rs
