[package]
name = "exchange"
version = "0.1.0"
authors = ["milan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-number = "0.1.6"
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
chrono = "0.4"
ctrlc = { version = "3.1.9", features = ["termination"] }
colour = "0.6.0"
redis = "0.20.2"
